added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -20,6 +20,7 @@
         <p>Solving the problem of scattered event systems</p>
         <pre id="testJoinRSO"></pre>
         <pre id="joinRSOResult"></pre>
+        <pre id="youKnow"></pre>
     </header>
     <div class="navbar">
         <!-- Navbar here -->
