added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -56,7 +56,7 @@
 
             <h2>RSO List</h2>
             <form>
-                <div id="listRsoResult" class="table-container">
+                <div id="listRsoResult" class="container">
                     <!-- RSO list will be displayed here -->
                 </div>
 
