--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -66,7 +66,7 @@
             <form action="submit_event.php" method="post">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" required><br><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" onsubmit="rsoRequest()">
             </form>
 
 
