added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -64,8 +64,8 @@
 
             <h2>Create RSO Request</h2>
             <form action="submit_event.php" method="post">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" required><br><br>
+                <label for="rsoRequestName">Name:</label><br>
+                <input type="text" id="rsoRequestName" name="rsoRequestName" required><br><br>
                 <button type="button" onclick="rsoRequest()">Submit</button>
             </form>
 
