added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -66,10 +66,10 @@
             <form action="submit_event.php" method="post">
                 <label for="rsoName">Name:</label><br>
                 <input type="text" id="rsoName" name="rsoName" required><br><br>
-                <button type="button" onclick="addRSO()">Submit</button>
+                <button type="button" onclick="rsoRequest()">Submit</button>
             </form>
-            <pre id="RsoReval"></pre>
-            <pre id="addRsoResult"></pre>
+            <!-- <pre id="RsoReval"></pre>
+            <pre id="addRsoResult"></pre> -->
 
 
         </div>
