--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                     <span id="loginResult"></span>
                 </div>
                 <div class="form-group inactive" id="registerForm">
+
+                    <select id="UniversitySelectionList" name="UniversitySelectionList" required>
+                        <!-- RSO list will be displayed here -->
+                    </select>
+
                     <input id="registerFirstName" class="input" type="text" placeholder="First Name">
                     <input id="registerLastName" class="input" type="text" placeholder="Last Name">
                     <input id="registerLogin" class="input" type="text" placeholder="Username">
@@ -63,6 +68,9 @@
     </div>
     <div id="root"></div>
     <script src="./js/scripts.js"></script>
+    <script>
+        window.onload = listUniversitySelect();
+    </script>
 
 </body>
 
