--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/landing-styles.css">
     <link rel="stylesheet" href="/css/student-styles.css">
     <script src="/js/scripts.js"></script>
-    <script src="/js/student-scripts.js"></script>
+    <!-- <script src="/js/student-scripts.js"></script> -->
 
 
 </head>
