added joinRSO js

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group inactive" id="registerForm">
 
-                    <select id="UniversitySelectionList" name="UniversitySelectionList" required>
+                    <select id="UniversitySelectionList" class="input" name="UniversitySelectionList" required>
                         <!-- RSO list will be displayed here -->
                     </select>
 
