--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="root"></div>
     <script src="./js/scripts.js"></script>
     <script>
-        window.onload = listUniversitySelect();
+        window.onload = listUniversitySelectRegister();
     </script>
 
 </body>
