added joinRSO js

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <p class="toggleText">Already have an account? <button class="transparent-button" onclick="switchContent()"
                             style="direction: none;">Login</button></p>
                     <span id="registerResult"></span>
+                    <span id="rrrrreg"></span>
                 </div>
             </div>
         </div>
