added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><a href="#" onclick="showContent('home', event)">Student Home</a></li>
                 <li><a href="#" onclick="showContent('events', event)">Events</a></li>
-                <li><a href="#" onclick="showContent('rso', event) ">RSOs</a></li>
+                <!-- <li><a href="#" onclick="showContent('rso', event) ">RSOs</a></li> -->
                 <li><a href="#" onclick="doLogout()">Logout</a></li>
 
             </ul>
@@ -41,7 +41,7 @@
             <p> ADD & DELETE Comments and Rate Events</p>
             <div id="events-container"></div>
         </div>
-        <div id="events" class="feature" style="display: none;">
+        <!-- <div id="events" class="feature" style="display: none;">
 
             <h2>Search Events</h2>
             <form>
@@ -51,7 +51,7 @@
             <input type="submit" value="Submit">
             </form>
 
-        </div>
+        </div> -->
         <div id="rso" class="feature" style="display: none;">
 
             <h2>RSO List</h2>
