added joinRSO js

--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -27,8 +27,8 @@
         <nav>
             <ul>
                 <li><a href="#" onclick="showContent('home', event)">Student Home</a></li>
-                <li><a href="#" onclick="showContent('events', event)">Events</a></li>
-                <!-- <li><a href="#" onclick="showContent('rso', event) ">RSOs</a></li> -->
+                <!-- <li><a href="#" onclick="showContent('events', event)">Events</a></li> -->
+                <li><a href="#" onclick="showContent('rso', event) ">RSOs</a></li>
                 <li><a href="#" onclick="doLogout()">Logout</a></li>
 
             </ul>
