--- a/student_landing_page.html
+++ b/student_landing_page.html
@@ -98,13 +98,7 @@
     </script>
     <script>
         // Call the fetchEvents function when the page loads
-        window.onload = function () {
-            setTimeout(listRSOdelay, 2000); // 3000 milliseconds = 3 seconds
-        };
-
-        function listRSOdelay() {
-            listRSO();
-        }
+        window.onload = listRSO();
     </script>
 </body>
 
