added joinRSO js

--- a/superadmin_landing_page.html
+++ b/superadmin_landing_page.html
@@ -99,7 +99,7 @@
     </footer>
 
     <script>
-        window.onload = listUniversitySelect();
+        window.onload = listUniversitySelectRegister();
         function submitStudentForm() {
             submitForm("Student");
         }
